--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,11 +1,9 @@
-@import "./colorCode";
-
 //header
 header {
     width: 100%;
     min-width: 1480px;
     height: 110px;
-    background: $black002;
+    background: #1f1f1f;
     position: relative;
     z-index: 10;
     overflow: hidden;
@@ -18,14 +16,14 @@ header {
     .top {
         width: 100%;
         height: 25px;
-        background: $black001;
+        background: #131313;
 
         //盤口對照表+設定
         .conversionBtn,.controlBtn {
             float: left;
             width: auto;
             height: 100%;
-            color: $gray001;
+            color: #969696;
             background: transparent;
             margin-left: 15px;
             font-size: 13px;
@@ -43,13 +41,13 @@ header {
                 position: absolute;
                 left: -23px;
                 top: 4px;
-                color: $green001;
+                color: #31be16;
             }
 
             marquee {
                 line-height: 25px;
                 font-size: 12px;
-                color: $green001;
+                color: #37bd10;
                 overflow: visible;
             }
         }
@@ -58,7 +56,7 @@ header {
         span {
             float: right;
             font-size: 12px;
-            color: $gray001;
+            color: #7a7a7a;
             line-height: 25px;
             margin-right: 15px;
         }
@@ -74,8 +72,8 @@ header {
                 height: 15px;
                 border-radius: 30px;
                 margin: 5px 5px 0px 0px;
-                border: solid 1px $green001;
-                background: $black001;
+                border: solid 1px #46d616;
+                background: #131313;
 
                 &:nth-of-type(2) {
                     background: #ebf1fb;
@@ -105,7 +103,7 @@ header {
             font-weight: bolder;
             text-align: center;
             line-height: 85px;
-            color: $white001;
+            color: #fff
         }
 
         //上列表
@@ -123,13 +121,13 @@ header {
                     padding: 0px 10px;
                     height: 76px;
                     line-height: 85px;
-                    color: $white001;
+                    color: #fff;
                     border-bottom: solid 5px transparent;
                     font-size: 14px;
 
                     &:hover,&:active,&.active {
-                        border-color: $green001;
-                        color: $green001;
+                        border-color: #33ba04;
+                        color: #7df81a;
                     }
 
                     .fa-user {
@@ -159,14 +157,14 @@ header {
                 position: relative;
 
                 input {
-                    background: #131313;
-                    border: solid 1px #39792d;
-                    color: #ffffff;
                     width: 130px;
                     height: 25px;
                     font-size: 14px;
                     padding-left: 5px;
                     border-radius: 3px;
+                    border: solid 1px #39792d;
+                    background: #131313;
+                    color: #45b51f;
 
                     &::placeholder {
                         color: #999999;
@@ -178,7 +176,7 @@ header {
                     left: 0px;
                     bottom: -28px;
                     font-size: 14px;
-                    color: $green001;
+                    color: #45b51f;
                 }
 
                 .remember {
@@ -186,7 +184,7 @@ header {
                     left: 18px;
                     bottom: -28px;
                     font-size: 14px;
-                    color: $white002;
+                    color: #ababab;
 
                     .cube {
                         left: -18px;
@@ -196,28 +194,36 @@ header {
             }
 
             .loginBtn {
-                background: linear-gradient(to right, #92e820 0%, #46dd16 100%);
-                border: solid 1px #6a8e2a;
-                color: #1c1c1c;
-                padding: 6px 14px;
+                background: linear-gradient(to right,#45dc16 0%,#91e820 90%);
+                border: solid 1px #cdff7f;
+                padding: 5px 14px;
                 border-radius: 3px;
+                color: #131313;
                 font-size: 14px;
                 font-weight: bold;
                 margin-right: 8px;
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to left, #4daa03 0%, #24700c 100%);
-                    border-color: #6a8e2a;
-                    color: #f4f4f4;
+                    border-color: #ffffff;
+                    background: #fff;
+                    color: #393939;
                 }
             }
 
             .signupBtn {
-                @include btnStyle002;
+                background: linear-gradient(to top,#131313 0%,#323232 100%);
                 border-radius: 3px;
+                color: #fff;
                 padding: 6px 14px;
                 font-size: 14px;
                 font-weight: bold;
+                border: solid 1px #2c8e0b;
+
+                &:hover,&:active,&.active {
+                    border-color: #ffffff;
+                    background: #fff;
+                    color: #59a936;
+                }
             }
 
             .selectBox {
@@ -229,7 +235,7 @@ header {
                 .fa-globe {
                     float: left;
                     margin: 3px 6px 0px 0px;
-                    color: $white002;
+                    color: #ababab;
                 }
 
                 //下箭頭
@@ -241,17 +247,27 @@ header {
                     height: 0px;
                     border-style: solid;
                     border-width: 10px 8px 0px 8px;
-                    border-color: $white002 transparent;
+                    border-color: #ababab transparent;
                     top: 7px;
                     right: 10px;
                 }
 
                 select {
-                    @include selectStyle001;
                     width: 110px;
                     padding: 3px 0px 3px 5px;
+                    background: transparent;
+                    border: solid 1px #707070;
                     border-radius: 3px;
+                    color: #ababab;
                     font-size: 12px;
+                    appearance:none;   
+                    -moz-appearance:none;   
+                    -webkit-appearance:none;
+                    background: #262626;
+
+                    option {
+                        color: #ababab;
+                    }
                 }
             }
         }
@@ -272,30 +288,38 @@ header {
             //字體
             p {
                 display: inline-block;
-                color: $white002;
+                color: #ababab;
                 font-size: 13px;
                 margin: 10px 5px 0px 0px;
 
                 //信用額度
                 &.quota {
                     padding: 7px 7px 5px;
-                    border: solid 1px $gray003;
+                    border: solid 1px #707070;
                     border-radius: 3px;
-                    background: $black002;
+                    background: #262626;
                 }
 
                 span {
-                    color: $green001;
+                    color: #40c50f;
                     padding-left: 8px;
                 }
             }
 
             //登出按鈕
             button {
-                @include btnStyle002;
                 border-radius: 3px;
                 padding: 4px 15px;
+                background: linear-gradient(to top,#131313,#323232 100%);
+                color: #40c50f;
                 font-size: 14px;
+                border: solid 1px #2c8e0b;
+
+                &:hover,&:active,&.active {
+                    background: linear-gradient(to bottom,#45dc16 10%,#91e820 90%);
+                    color: #1c1c1c;
+                    border-color: #cdff7f;
+                }
             }
 
             .selectBox {
@@ -307,7 +331,7 @@ header {
                 .fa-globe {
                     float: left;
                     margin: 3px 6px 0px 0px;
-                    color: $white002;
+                    color: #ababab;
                 }
 
                 //下箭頭
@@ -319,17 +343,27 @@ header {
                     height: 0px;
                     border-style: solid;
                     border-width: 10px 8px 0px 8px;
-                    border-color: $white002 transparent;
+                    border-color: #ababab transparent;
                     top: 7px;
                     right:10px;
                 }
 
                 select {
-                    @include selectStyle001;
                     width: 110px;
                     padding: 3px 0px 3px 5px;
+                    background: transparent;
+                    border: solid 1px #ababab;
                     border-radius: 3px;
+                    color: #ababab;
                     font-size: 12px;
+                    background: #262626;
+                    appearance:none;   
+                    -moz-appearance:none;   
+                    -webkit-appearance:none;
+
+                    option {
+                        color: #ababab;
+                    }
                 }
             }
         }
