--- a/scss/_leftside.scss
+++ b/scss/_leftside.scss
@@ -1,5 +1,3 @@
-@import "./colorCode";
-
 .left {
     width: 270px;
     height: 850px;
@@ -9,9 +7,9 @@
     position: relative;
     z-index: 6;
     scrollbar-width: thin;
-    border: solid 1px $gray002;
+    border: solid 1px #6a6a6a;
     border-width: 1px 0px;
-    background: $black007;
+    background: #404040;
 
     &::-webkit-scrollbar {
         width: 5px;
@@ -19,12 +17,12 @@
     }
 
     &::-webkit-scrollbar-track {
-        background: $black001;
+        background: #121212;
         border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: $gray002;
+        background: #606360;
         border-radius: 10px;
     }
     
@@ -54,10 +52,10 @@
 
                 //字樣
                 p {
-                    color: $white001;
+                    color: #ffffff;
 
                     &.joinday {
-                        color: $white001;
+                        color: #ffffff;
                         font-size: 15px;
                         padding-top: 5px;
                     }
@@ -66,10 +64,11 @@
                         display: inline-block;
                         width: 36px;
                         height: 17px;
-                        background: $linear-gradient003;
+                        background: linear-gradient(to right, #a1ea22 0%, #34da14 100%);
+                        background-color: #34da14;
                         position: relative;
                         text-align: right;
-                        color: $black001;
+                        color: #161616;
                         font-weight: bold;
                         border-radius: 5px;
                         margin: -3px 0px 0px 5px;
@@ -105,14 +104,14 @@
                     font-size: 16px;
                     text-align: center;
                     background: transparent;
-                    color: $white003;
+                    color: #c0c0c0;
                     padding-top: 10px;
                     border: solid 1px transparent;
 
                     &:hover,&:active,&.active {
-                        background: $linear-gradient002;
-                        color: $green001;
-                        border-color: $green002;
+                        background: linear-gradient(to top,#363636 0%,#1d1d1d 100%);
+                        color: #53c120;
+                        border-color: #2d7e12;
                         span {
                             background-position-y: -30px;
                         }
@@ -130,21 +129,21 @@
         //下半選單
         ul {
             li {
-                border-bottom: solid 1px $gray002;
+                border-bottom: solid 1px #6f6f6f;
 
                 &:nth-of-type(1),&:nth-of-type(5),&:nth-of-type(9) {
-                    border-color: $white008;
+                    border-color: #e6e9f3;
                 }
 
                 &:hover,&:active,&.active {
 
                     a {
-                        border-color: $green002;
+                        border-color: #30800e;
                     }
 
                     .live {
-                        background: $linear-gradient003;
-                        color: $black001;
+                        background: linear-gradient(to right,#a1ea22 0%,#34da14 100%);
+                        color: #2b4517;
                     }
                 }
 
@@ -162,8 +161,8 @@
                         position: initial;
                         margin-left: 10px;
                         transform: translateY(0px);
-                        background: $black001;
-                        color: $green017;
+                        background: #1d1d1d;
+                        color: #60dc1c;
                     }
 
                     i {
@@ -194,15 +193,15 @@
             &:hover {
 
                 a {
-                    background: $linear-gradient002;
-                    color: $green001;
+                    background: linear-gradient(to bottom,#1d1d1d 16%,#303030 100%);
+                    color: #57ed22;
 
                     svg {
-                        fill: $green001;
+                        fill: #3abc0d;
                     }
 
                     i {
-                        color: $green001;
+                        color: #3abc0d;
                     }
                 }
             }
@@ -214,15 +213,15 @@
                 }
 
                 a {
-                    background: $linear-gradient002;
-                    color: $green001;
+                    background: linear-gradient(to bottom,#1d1d1d 16%,#303030 100%);
+                    color: #57ed22;
 
                     svg {
-                        fill: $green001;
+                        fill: #3abc0d;
                     }
 
                     i {
-                        color: $green001;
+                        color: #3abc0d;
                     }
                 }
             }
@@ -236,15 +235,15 @@
 
             a {
                 display: block;
-                color: $white003;
+                color: #e0e0e0 ;
                 width: calc(100% - 50px);
-                background: $linear-gradient001;
+                background: linear-gradient(to top,#323232 0%,#434343 100%);
                 height: 45px;
                 line-height: 45px;
                 font-size: 14px;
                 padding-left: 50px;
                 position: relative;
-                border-bottom: solid 1px $gray002;
+                border-bottom: solid 1px #6a6a6a;
 
                 //字前小圖
                 i {
@@ -252,7 +251,7 @@
                     top: 12px;
                     left: 18px;
                     font-size: 18px;
-                    color: $white002;
+                    color: #ababab;
 
                     &::before {
                         margin: 0px auto;
@@ -279,7 +278,7 @@
                     position: absolute;
                     left: 18px;
                     top: 12px;
-                    fill: $white002;
+                    fill: #ababab;
                 }
 
                 //字後小框
@@ -288,7 +287,7 @@
                     right: 10px;
                     top: 0px;
                     font-size: 13px;
-                    color: $white003;
+                    color: #e0e0e0;
                 }
 
                 //LIVE小框
@@ -302,8 +301,8 @@
                     transform: translateY(-50%);
                     right: 42px;
                     font-size: 12px;
-                    background: $linear-gradient003;
-                    color: #131313;
+                    background: linear-gradient(to right,#a1ea22 0%,#34da14 100%);
+                    color: #2b4517;
                     padding: 0px 4px;
                     border-radius: 3px;
                 }
@@ -313,17 +312,17 @@
                 display: none;
                 width: calc(100% - 30px);
                 height: 30px;
-                background: $black005;
-                border-bottom: solid 1px $black012;
+                background: #2d2d2d;
+                border-bottom: solid 1px #4c4c4c;
                 line-height: 30px;
                 padding-left: 30px;
                 font-size: 12px;
-                color: $green006;
+                color: #46dd16;
                 cursor: pointer;
 
                 &:hover,&:active,&.active {
-                    background: $linear-gradient003;
-                    color: $black001;
+                    background: linear-gradient(to right,#45dc16 0%,#8fe720 100%);
+                    color: #1d1d1d;
                 }
 
                 span {
