--- a/scss/_fixside.scss
+++ b/scss/_fixside.scss
@@ -66,8 +66,8 @@
     .search {
         width: 300px;
         height: 60px;
-        background: $linear-gradient004;
-        border: solid 1px $green003;
+        background: linear-gradient(to top,#272727 0%,#434343);
+        border: solid 1px #327e1a;
         border-radius: 3px 0px 0px 3px;
         position: absolute;
         top: 0px;
@@ -77,7 +77,7 @@
         
         &.open {
             left: -240px;
-            background: $black003;
+            background: #414141;
         }
 
         .searchbut {
@@ -89,10 +89,10 @@
             text-align: center;
 
             &:hover,&:active,&.active {
-                background: $linear-gradient005;
+                background: linear-gradient(to bottom, #33ab0a 0%, #68e73c 100%);
 
                 span {
-                    color: $black001;
+                    color: #131313;
                 }
 
                 .fixsideimg {
@@ -102,7 +102,7 @@
 
             span {
                 font-size: 13px;
-                color: $white005;
+                color: #c8c8c8;
             }
 
             .fixsideimg {
@@ -118,30 +118,41 @@
         }
 
         input {
-            @include inputStyle002;
             width: 140px;
             height: 30px;
             font-size: 16px;
             padding-left: 10px;
+            box-shadow: 0px 3px 10px 2px #1f1f1f inset;
+            border: solid 1px #5d5d5d;
             border-top: none;
             border-radius: 3px;
             float: left;
             margin: 15px 0px 0px 10px;
+            background: linear-gradient(to bottom,#303030 21%,#424242 100%);
+            color: #898787;
 
             &::placeholder {
                 font-weight: bold;
+                color: #898787;
                 font-size: 14px;
             }
         }
 
         button {
-            @include btnStyle005;
             width: 50px;
             height: 28px;
+            background: #2b2b2b;
+            border: solid 1px #34aa0d;
+            color: #42c317;
             float: left;
             border-radius: 5px;
             font-size: 16px;
             margin: 16px 0px 16px 15px;
+
+            &:hover,&:active,&.active {
+                color: #2b2b2b;
+                background: #34aa0d;
+            }
         }
 
         //隊伍內容
@@ -160,14 +171,10 @@
                 padding-left: 20px;
                 position: relative;
                 font-size: 14px;
-                background: $linear-gradient001;
+                background: linear-gradient(to top, #393939 0%, #555555 100%);
                 cursor: pointer;
-                color: $white003;
-                border-bottom: solid 1px $gray002;
-
-                &:nth-of-type(1) {
-                    border-top: solid 1px $gray002;
-                }
+                color: #dadada;
+                border-bottom: solid 1px #6c6c6c;
 
                 &::before {
                     content: "";
@@ -175,7 +182,7 @@
                     height: 0px;
                     position: absolute;
                     border-style: solid;
-                    border-color: $white004 transparent;
+                    border-color: #b2b2b2 transparent;
                     border-width: 10px 8px 0px 8px;
                     right: 40px;
                     top: 21px;
@@ -184,7 +191,8 @@
                 }
 
                 &:hover,&:active,&.active {
-                    background: $linear-gradient002;
+                    background: linear-gradient(to bottom, #2d2d2d 0%, #393939 100%);
+                    color: #dadada;
 
                     &::before {
                         transform: rotate(0deg);
@@ -193,7 +201,7 @@
             }
 
             div {
-                background: $black007;
+                background: #2c2c2c;
                 width: 100%;
                 height: 0px;
                 overflow: hidden;
@@ -207,13 +215,13 @@
                     width: 100%;
                     height: 50px;
                     line-height: 50px;
-                    color: $white006;
-                    border-bottom: solid 1px $gray006;
+                    color: #b9b9b9;
+                    border-bottom: solid 1px #8c8c8c;
                     font-size: 14px;
 
                     &:hover,&:active,&.active {
-                        background: $black002;
-                        color: $green001;
+                        background: #212121;
+                        color: #53ca2a;
                     }
 
                     .team {
@@ -251,22 +259,57 @@
         position: relative;
         transition: all 0.3s;
 
+        //漢堡選單
+        .hamBtn {
+            display: none;
+            width: 30px;
+            height: 30px;
+            position: absolute;
+            top: 0px;
+            left: -30px;
+            border-radius: 3px 0px 0px 3px;
+            background: #eaedf4;
+            padding: 0px;
+            cursor: pointer;
+            &:hover,&:active,&.active {
+                background: linear-gradient(to right, #7f8cd1 0%, #1a2b84 100%);
+                span {
+                    background: #fff;
+                }
+            }
+
+            span {
+                display: block;
+                width: 55%;
+                height: 4px;
+                background: #f3b378;
+                margin:0px 0px 0px 7px;
+                border-radius: 5px;
+                &:first-child {
+                    margin: 6px 0px 3px 7px;
+                }
+                &:last-child {
+                    margin-top: 3px;
+                }
+            }
+        }
+
         a {
             display: block;
             width: 100%;
             height: 62px;
-            background: $linear-gradient004;
+            background: linear-gradient(to top,#272727 0%,#434343 100%);
             border-radius: 3px 0px 0px 3px;
             text-align: center;
             margin-top: 3px;
-            border: solid 1px $green003;
+            border: solid 1px #327e1a;
             cursor: pointer;
 
             &:hover,&:active,&.active {
-                background: $linear-gradient005;
+                background: linear-gradient(to bottom, #33ab0a 0%, #68e73c 100%);
 
                 span {
-                    color: $black001;
+                    color: #131313;
                 }
 
                 .fixsideimg {
@@ -276,7 +319,7 @@
 
             span {
                 font-size: 13px;
-                color: $white005;
+                color: #d0d0d0;
             }
 
             .fixsideimg {
