--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -29,7 +29,7 @@ main {
         height: 1000px;
         position: absolute;
         top: 0px;
-        background: $black001;
+        background: #131313;
         z-index: -999;
     }
 }
